test/corpus/pair_tags.txt
========================================
01_inline
========================================

some text [ b #] inline stuff [# b ] more text

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (expr)))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr)
      (expr))))

========================================
02_mixed
========================================

intro [ note #] first bit
| a | b |
-  item
[# note ] outro

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (expr))
          (table
            (row
              (cell
                (contents
                  (expr)))
              (cell
                (contents
                  (expr)))))
          (list
            (listitem
              (bullet
                (segment))
              (paragraph
                (expr)))))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr))))

========================================
03_block
========================================

[ div #]
para one
still one

para two
[# div ]

----------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (tag_end))
      (body
        (paragraph
          (expr)
          (expr)
          (expr)
          (expr))
        (paragraph
          (expr)
          (expr)))
      (pair_close
        (tag_start)
        (tag_name)
        (tag_end)))))

========================================
04_nested_inline
========================================

a [ x #] b [ y #] c [# y ] d [# x ] e

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (pair_tag
              (pair_open
                (tag_start)
                (tag_name)
                (tag_end))
              (body
                (paragraph
                  (expr)))
              (pair_close
                (tag_start)
                (tag_name)
                (tag_end)))
            (expr)))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr))))

========================================
05_block_tail
========================================

[ div #]
body line [# div ] after

----------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (tag_end))
      (body
        (paragraph
          (expr)
          (expr)))
      (pair_close
        (tag_start)
        (tag_name)
        (tag_end)))
    (paragraph
      (expr))))

========================================
06_portal_list
========================================

-  item one [ note #]
-  inner list at col 0
-  second
[# note ] tail
-  item two

----------------------------------------

(document
  (body
    (list
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr)
          (expr)
          (pair_tag
            (pair_open
              (tag_start)
              (tag_name)
              (tag_end))
            (body
              (list
                (listitem
                  (bullet
                    (segment))
                  (paragraph
                    (expr)
                    (expr)
                    (expr)
                    (expr)
                    (expr)))
                (listitem
                  (bullet
                    (segment))
                  (paragraph
                    (expr)))))
            (pair_close
              (tag_start)
              (tag_name)
              (tag_end)))
          (expr)))
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr)
          (expr))))))

========================================
07_portal_fence
========================================

-  item [ code #]
```  js
let x = 1
```
[# code ]
-  next

----------------------------------------

(document
  (body
    (list
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr)
          (pair_tag
            (pair_open
              (tag_start)
              (tag_name)
              (tag_end))
            (body
              (block
                (fence)
                (expr)
                (contents
                  (expr)
                  (expr)
                  (expr)
                  (expr))
                (fence)))
            (pair_close
              (tag_start)
              (tag_name)
              (tag_end)))))
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr))))))

========================================
08_portal_btag
========================================

[ box ]#
  inside [ p #]
[ inner ]#
  deep
back at zero
[# p ] done
  still box
after box

----------------------------------------

(document
  (body
    (block_tag
      (tag_start)
      (tag_name)
      (tag_end)
      (body
        (paragraph
          (expr)
          (pair_tag
            (pair_open
              (tag_start)
              (tag_name)
              (tag_end))
            (body
              (block_tag
                (tag_start)
                (tag_name)
                (tag_end)
                (body
                  (paragraph
                    (expr))))
              (paragraph
                (expr)
                (expr)
                (expr)))
            (pair_close
              (tag_start)
              (tag_name)
              (tag_end)))
          (expr)
          (expr)
          (expr))))
    (paragraph
      (expr)
      (expr))))

========================================
09_outer_closer
========================================

a [ x #] b [ y #] c [# x ] d

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (pair_tag
              (pair_open
                (tag_start)
                (tag_name)
                (tag_end))
              (body
                (paragraph
                  (expr)))
              (implicit_close))))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr))))

========================================
10_eof
========================================

text [ x #] never closed
more

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (expr)
            (expr)))
        (implicit_close)))))

========================================
11_heading
========================================

text [ x #] never closed
more
  1. Heading
sec body

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (expr)
            (expr)))
        (implicit_close))))
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (paragraph
        (expr)
        (expr)))))

========================================
12_heading_list
========================================

-  item [ x #] open
body
  1. Heading
sec

----------------------------------------

(document
  (body
    (list
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr)
          (pair_tag
            (pair_open
              (tag_start)
              (tag_name)
              (tag_end))
            (body
              (paragraph
                (expr)
                (expr)))
            (implicit_close))
          (expr)
          (expr))))
    (paragraph
      (expr))))

========================================
13_stray
========================================

text [# zz ] more

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (stray_close)
      (expr))))

========================================
14_block_nested
========================================

[ outer #]
[ inner #]
-  li
[# inner ]
after inner
[# outer ]

----------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (tag_end))
      (body
        (pair_tag
          (pair_open
            (tag_start)
            (tag_name)
            (tag_end))
          (body
            (list
              (listitem
                (bullet
                  (segment))
                (paragraph
                  (expr)))))
          (pair_close
            (tag_start)
            (tag_name)
            (tag_end)))
        (paragraph
          (expr)
          (expr)))
      (pair_close
        (tag_start)
        (tag_name)
        (tag_end)))))

========================================
15_empty
========================================

a [ x #][# x ] b

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr))))

========================================
16_in_listitem_block
========================================

-  [ div #]
zero indent body
-  list in body
[# div ]
-  sibling

----------------------------------------

(document
  (body
    (list
      (listitem
        (bullet
          (segment))
        (pair_tag
          (pair_open
            (tag_start)
            (tag_name)
            (tag_end))
          (body
            (paragraph
              (expr)
              (expr)
              (expr))
            (list
              (listitem
                (bullet
                  (segment))
                (paragraph
                  (expr)
                  (expr)
                  (expr)))))
          (pair_close
            (tag_start)
            (tag_name)
            (tag_end))))
      (listitem
        (bullet
          (segment))
        (paragraph
          (expr))))))

========================================
17_section
========================================

  1. Head
-  li [ n #] x
y
[# n ] z
  2. Next
body

----------------------------------------

(document
  (body)
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (list
        (listitem
          (bullet
            (segment))
          (paragraph
            (expr)
            (pair_tag
              (pair_open
                (tag_start)
                (tag_name)
                (tag_end))
              (body
                (paragraph
                  (expr)
                  (expr)))
              (pair_close
                (tag_start)
                (tag_name)
                (tag_end)))
            (expr))))))
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (paragraph
        (expr)))))

========================================
18_nested_heading
========================================

a [ x #] b [ y #] c
  1. Heading
sec

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (pair_tag
              (pair_open
                (tag_start)
                (tag_name)
                (tag_end))
              (body
                (paragraph
                  (expr)))
              (implicit_close))))
        (implicit_close))))
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (paragraph
        (expr)))))

========================================
19_block_heading
========================================

[ div #]
unclosed body
  1. Heading
sec

----------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (tag_end))
      (body
        (paragraph
          (expr)
          (expr)))
      (implicit_close)))
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (paragraph
        (expr)))))

========================================
20_btag_heading
========================================

[ box ]#
  in [ p #] open
  1. Heading
sec

----------------------------------------

(document
  (body
    (block_tag
      (tag_start)
      (tag_name)
      (tag_end)
      (body
        (paragraph
          (expr)
          (pair_tag
            (pair_open
              (tag_start)
              (tag_name)
              (tag_end))
            (body
              (paragraph
                (expr)))
            (implicit_close))
          (expr)
          (expr))))
    (paragraph
      (expr))))

========================================
21_fence_in_pair_heading
========================================

a [ x #]
```
  1. not a heading
```
[# x ] b

----------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (block
            (fence)
            (contents
              (expr)
              (expr)
              (expr)
              (expr))
            (fence)))
        (pair_close
          (tag_start)
          (tag_name)
          (tag_end)))
      (expr))))

============================================================
a bar in a paragraph of a pair body is text
============================================================

[ q #]
a | b

"|" - meaning
[# q ]

------------------------------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (tag_end))
      (body
        (paragraph
          (expr)
          (expr)
          (expr))
        (paragraph
          (expr)
          (expr)
          (expr)))
      (pair_close
        (tag_start)
        (tag_name)
        (tag_end)))))

============================================================
a pair opener head may hold a sign and a bracket
============================================================

[ q, a -> b :) #]
body
[# q ]

------------------------------------------------------------

(document
  (body
    (pair_tag
      (pair_open
        (tag_start)
        (tag_name)
        (value)
        (tag_end))
      (body
        (paragraph
          (expr)))
      (pair_close
        (tag_start)
        (tag_name)
        (tag_end)))))
