test/corpus/pair_tags_errors.txt
============================================================
Unclosed pair at EOF is closed there
============================================================

text [ b #]never closed

------------------------------------------------------------

(document
  (body
    (paragraph
      (expr)
      (pair_tag
        (pair_open
          (tag_start)
          (tag_name)
          (tag_end))
        (body
          (paragraph
            (expr)
            (expr)))
        (implicit_close)))))

============================================================
Unclosed pair at section end is closed there
============================================================

  1. One
[ b #]open
  2. Two

------------------------------------------------------------

(document
  (body)
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))
    (body
      (paragraph
        (pair_tag
          (pair_open
            (tag_start)
            (tag_name)
            (tag_end))
          (body
            (paragraph
              (expr)))
          (implicit_close)))))
  (section
    (heading
      (signature
        (segment))
      (title
        (expr)))))
